# zju-oop-object-serialization

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  clean_bin.sh  clean_generated.sh  cmake_install.cmake  test-binary.cpp  test.sh  test_binary.cpp  test_xml.cpp
include/: common.h  libbinary.h  libxml.h  test_utils.h  type_utils.h
tests/: test_binary.cpp  test_xml.cpp  test_xml_b64.cpp
